// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withAccordionItemState(BpkAccordionItem) should render correctly 1`] = `
<DocumentFragment>
  <div
    id="my-accordion"
  >
    <dt
      class="bpk-accordion__title bpk-accordion__title--collapsed"
    >
      <button
        aria-controls="my-accordion_content"
        aria-expanded="false"
        class="bpk-accordion__toggle-button"
        type="button"
      >
        <span
          class="bpk-accordion__flex-container"
        >
          <span
            class="bpk-accordion__title-text"
          >
            <span
              class="bpk-text bpk-text--body-default"
            >
              My accordion item
            </span>
          </span>
          <span
            class="bpk-accordion__icon-wrapper"
          >
            <span
              class="bpk-accordion__item-expand-icon"
            >
              <span
                style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
              >
                <svg
                  aria-hidden="true"
                  style="width: 1rem; height: 1rem;"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19.113 8.095a1.496 1.496 0 010 2.008l-6.397 5.948a1 1 0 01-1.358.003l-6.532-6.01a1.427 1.427 0 01.138-1.949 1.572 1.572 0 011.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 012.104 0z"
                  />
                </svg>
              </span>
            </span>
          </span>
        </span>
      </button>
    </dt>
    <dd
      class="bpk-accordion__content-container"
      id="my-accordion_content"
    >
      <div
        style="height: 0px; overflow: hidden; transition: height 200ms ease;"
      >
        <div
          style="display: none;"
        >
          My accordion content
        </div>
      </div>
    </dd>
  </div>
</DocumentFragment>
`;

exports[`withAccordionItemState(BpkAccordionItem) should render correctly with "expanded" prop 1`] = `
<DocumentFragment>
  <div
    id="my-accordion"
  >
    <dt
      class="bpk-accordion__title bpk-accordion__title--collapsed"
    >
      <button
        aria-controls="my-accordion_content"
        aria-expanded="false"
        class="bpk-accordion__toggle-button"
        type="button"
      >
        <span
          class="bpk-accordion__flex-container"
        >
          <span
            class="bpk-accordion__title-text"
          >
            <span
              class="bpk-text bpk-text--body-default"
            >
              My accordion item
            </span>
          </span>
          <span
            class="bpk-accordion__icon-wrapper"
          >
            <span
              class="bpk-accordion__item-expand-icon"
            >
              <span
                style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
              >
                <svg
                  aria-hidden="true"
                  style="width: 1rem; height: 1rem;"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19.113 8.095a1.496 1.496 0 010 2.008l-6.397 5.948a1 1 0 01-1.358.003l-6.532-6.01a1.427 1.427 0 01.138-1.949 1.572 1.572 0 011.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 012.104 0z"
                  />
                </svg>
              </span>
            </span>
          </span>
        </span>
      </button>
    </dt>
    <dd
      class="bpk-accordion__content-container"
      id="my-accordion_content"
    >
      <div
        style="height: 0px; overflow: hidden; transition: height 200ms ease;"
      >
        <div
          style="display: none;"
        >
          My accordion content
        </div>
      </div>
    </dd>
  </div>
</DocumentFragment>
`;

exports[`withAccordionItemState(BpkAccordionItem) should render correctly with "initiallyExpanded" prop 1`] = `
<DocumentFragment>
  <div
    id="my-accordion"
  >
    <dt
      class="bpk-accordion__title"
    >
      <button
        aria-controls="my-accordion_content"
        aria-expanded="true"
        class="bpk-accordion__toggle-button"
        type="button"
      >
        <span
          class="bpk-accordion__flex-container"
        >
          <span
            class="bpk-accordion__title-text"
          >
            <span
              class="bpk-text bpk-text--body-default"
            >
              My accordion item
            </span>
          </span>
          <span
            class="bpk-accordion__icon-wrapper"
          >
            <span
              class="bpk-accordion__item-expand-icon bpk-accordion__item-expand-icon--flipped"
            >
              <span
                style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
              >
                <svg
                  aria-hidden="true"
                  style="width: 1rem; height: 1rem;"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19.113 8.095a1.496 1.496 0 010 2.008l-6.397 5.948a1 1 0 01-1.358.003l-6.532-6.01a1.427 1.427 0 01.138-1.949 1.572 1.572 0 011.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 012.104 0z"
                  />
                </svg>
              </span>
            </span>
          </span>
        </span>
      </button>
    </dt>
    <dd
      class="bpk-accordion__content-container bpk-accordion__content-container--expanded"
      id="my-accordion_content"
    >
      <div
        style="height: auto; overflow: visible; transition: height 200ms ease;"
      >
        <div>
          My accordion content
        </div>
      </div>
    </dd>
  </div>
</DocumentFragment>
`;
